--- a/src/main/resources/com/example/travelplanning/hello-view.fxml
+++ b/src/main/resources/com/example/travelplanning/hello-view.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="button" stylesheets="@../../../CSS/Default.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="454.0" layoutY="335.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="454.0" layoutY="335.0" mnemonicParsing="false" stylesheets="@../../../CSS/Default.css" text="Button" />
    </children>
 </AnchorPane>
