--- a/src/main/resources/com/example/travelplanning/HomePage.fxml
+++ b/src/main/resources/com/example/travelplanning/HomePage.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="back" stylesheets="@../../../CSS/Default.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="com.example.travelplanning.HomePageCtrl" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="back" stylesheets="@../../../CSS/Default.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="614.0" layoutY="347.0" mnemonicParsing="false" stylesheets="@../../../CSS/Default.css" text="Button">
+      <Button fx:id="Plan" layoutX="614.0" layoutY="347.0" mnemonicParsing="false" stylesheets="@../../../CSS/Default.css" text="Button">
          <styleClass>
             <String fx:value="button" />
             <String fx:value="button" />
