--- a/src/main/resources/com/example/travelplanning/Questions.fxml
+++ b/src/main/resources/com/example/travelplanning/Questions.fxml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.TextField?>
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.travelplanning.Controllers.QuestionsCtrl">
    <children>
-      <TextField layoutX="566.0" layoutY="348.0" />
-      <Label alignment="CENTER" layoutX="453.0" layoutY="118.0" prefHeight="99.0" prefWidth="374.0" style="-fx-font-weight: bold;" text="Create your vacation">
+      <ImageView fitHeight="216.0" fitWidth="1280.0">
+         <image>
+            <Image url="@../../../CSS/greecebanner.png" />
+         </image>
+      </ImageView>
+      <Label alignment="CENTER" layoutX="453.0" layoutY="58.0" prefHeight="99.0" prefWidth="374.0" style="-fx-font-weight: bold;" text="Find your vacation" textFill="WHITE">
          <font>
             <Font name="Arial" size="32.0" />
          </font>
       </Label>
+      <TextField id="BudgetTextField" layoutX="620.0" layoutY="244.0" prefHeight="28.0" prefWidth="150.0" />
+      <Label alignment="CENTER" layoutX="509.0" layoutY="240.0" style="-fx-font-weight: bold;" text="Budget">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Button layoutX="588.0" onAction="#submit" layoutY="654.0" mnemonicParsing="false" text="Submit">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
