--- a/src/main/resources/com/example/travelplanning/Questions.fxml
+++ b/src/main/resources/com/example/travelplanning/Questions.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.travelplanning.Controllers.QuestionsCtrl">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.travelplanning.Controllers.QuestionsCtrl">
    <children>
       <ImageView fitHeight="216.0" fitWidth="1280.0">
          <image>
-            <Image url="@../../../CSS/greecebanner.png" />
+            <Image url="@../../../media/greecebanner.png" />
          </image>
       </ImageView>
       <Label alignment="CENTER" layoutX="453.0" layoutY="58.0" prefHeight="99.0" prefWidth="374.0" style="-fx-font-weight: bold;" text="Find your vacation" textFill="WHITE">
@@ -26,7 +26,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button layoutX="588.0" onAction="#submit" layoutY="654.0" mnemonicParsing="false" text="Submit">
+      <Button layoutX="588.0" layoutY="654.0" mnemonicParsing="false" onAction="#submit" text="Submit">
          <font>
             <Font size="24.0" />
          </font>
