--- a/src/main/resources/com/example/travelplanning/Questions.fxml
+++ b/src/main/resources/com/example/travelplanning/Questions.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.travelplanning.Controllers.QuestionsCtrl">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.travelplanning.Controllers.QuestionsCtrl">
    <children>
       <ImageView fitHeight="216.0" fitWidth="1280.0">
          <image>
@@ -21,7 +23,7 @@
          </font>
       </Label>
       <TextField id="BudgetTextField" layoutX="620.0" layoutY="244.0" prefHeight="28.0" prefWidth="150.0" />
-      <Label alignment="CENTER" layoutX="509.0" layoutY="240.0" style="-fx-font-weight: bold;" text="Budget">
+      <Label alignment="CENTER_RIGHT" layoutX="509.0" layoutY="240.0" style="-fx-font-weight: bold;" text="Budget">
          <font>
             <Font size="24.0" />
          </font>
@@ -31,5 +33,23 @@
             <Font size="24.0" />
          </font>
       </Button>
+      <Label alignment="CENTER_RIGHT" layoutX="387.0" layoutY="290.0" prefHeight="35.0" prefWidth="207.0" text="Number of People">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <TextField id="BudgetTextField" layoutX="620.0" layoutY="294.0" prefHeight="28.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="505.0" layoutY="342.0" prefHeight="35.0" prefWidth="90.0" text="Climate">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <ChoiceBox layoutX="620.0" layoutY="347.0" prefWidth="150.0" />
+      <Label alignment="CENTER_RIGHT" layoutX="535.0" layoutY="392.0" prefHeight="35.0" prefWidth="60.0" text="Date">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <DatePicker layoutX="620.0" layoutY="396.0" prefHeight="28.0" prefWidth="168.0" />
    </children>
 </AnchorPane>
